dependency injection and navigation added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 
@@ -87,5 +89,18 @@ dependencies {
     //Glide
     implementation "com.github.skydoves:landscapist-glide:2.1.1"
 
+    //Icons
+    implementation "androidx.compose.material:material-icons-core"
 
+    //dagger hilt
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
+    kapt "com.google.dagger:hilt-android-compiler:2.44"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
+
+
+}
+
+kapt {
+    correctErrorTypes true
 }
