--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,12 @@ dependencies {
     implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
 
 
+    def paging_version = "3.1.1"
+
+    implementation "androidx.paging:paging-runtime:$paging_version"
+
+
+
 }
 
 kapt {
